# operations-center

./: .env.example  .env.production  .gitattributes  .gitignore  .mcp.json  APPLE_GUIDELINES_AUDIT.md  APPLE_QUICK_REFERENCE.txt  APPLE_VALIDATION_CHECKLIST.md  APPLY_MIGRATIONS_MANUAL.sql  APPLY_MIGRATIONS_NOW.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_SUMMARY.md  BEST_PRACTICES_VALIDATION.md  CLAUDE.md  CRASH_SCENARIOS.md  DATABASE_SCHEMA_COMPLETE.md  DATABASE_SCHEMA_DIAGRAM.txt  DEEP_RESEARCH_PROMPT.md  DEPENDENCY_AUDIT_20251117.md  DEPLOYMENT.md  DISPATCH_BLUEPRINT.md  ERRORS_FIXED.md  ERROR_HANDLING_AUDIT.md  ERROR_HANDLING_FINDINGS_INDEX.md  ERROR_HANDLING_SUMMARY.txt  FOUNDATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTERACTION_SPEC.md  LANGCHAIN_REBUILD_BLUEPRINT.md  LANGCHAIN_V1_SHIP_IT.md  NOTE_CREATION_OPTIMIZATION.md  PROMPT_EVOLUTION.md  PROMPT_MODIFICATIONS_SUMMARY.md  QUICK_START.md  README.md  README_DATABASE.md  README_LOCAL_DEV.md  README_MIGRATION.md  (+27 more)
.claude/: instructions.md  settings.json
Audit_Reports/: APPLE_AUDIT_FINAL_REPORT.txt  APPLE_AUDIT_INDEX.md  APPLE_COMPLIANCE_SUMMARY.md  APPLE_GUIDELINES_AUDIT.md  APPLE_VALIDATION_CHECKLIST.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_MAP.md  AUDIT_DELIVERY_SUMMARY.txt  AUDIT_REPORT.md  BACKEND_REBUILD_PLAN.md  BEST_PRACTICES_VALIDATION.md  QUALITY_AUDIT.md  README_APPLE_AUDIT.md  README_RESEARCH_FINDINGS.md  STATE_AUDIT_ACTION_PLAN.md  STATE_AUDIT_INDEX.md  (+10 more)
libs/shared-utils/: README.md  pyproject.toml
libs/shared-utils/src/shared_utils/: __init__.py
(+264 files in other folders)
